--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 @theme{
     --color-primary:#0FCFEC;
     --color-secondary:#19D3AE;
-    --color-accent:#3A4256;
+    --color-accent-111:#3A4256;
     --color-base-100:#FFFFFF;
 
 }
